--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+WEEK_API_KEY=
+
+MOY_SKLAD_LOGIN=
+MOY_SKLAD_PASSWORD=
